--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="..." crossorigin="anonymous">
 </head>
 
 <body>
@@ -53,14 +55,16 @@
                         <li><a href="#courses-container">Course</a></li>
                         <li class="dropdown">
                             <a href="#">Department</a>
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
                                 <li><a href="dept/cs.html"><span>Computer Science & Engineering</span></a></li>
                                 <li><a href="dept/is.html"><span>Information Science & Engineering</span></a></li>
                                 <li><a href="dept/csd.html"><span>Computer Science & Design</span></a></li>
                                 <li><a href="dept/csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="dept/aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="dept/ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="dept/aiml.html"><span>Artificial Intelligence & Machine Learning</span></a>
+                                </li>
+                                <li><a href="dept/ece.html"><span>Electronics & Communication Engineering</span></a>
+                                </li>
                                 <li><a href="dept/mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
@@ -544,6 +548,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://kit.fontawesome.com/1373b730aa.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
