--- a/dept/csd.html
+++ b/dept/csd.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -50,7 +53,7 @@
                         <li><a href="#courses-container">Course</a></li>
                         <li class="dropdown">
                             <a href="#">Department</a>
-                            <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
                                 <li><a href="cs.html"><span>Computer Science & Engineering</span></a></li>
                                 <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
@@ -874,6 +877,43 @@
             /* display this row with flex and use wrap (= respect columns' widths) */
         </style>
         <script src="../script.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const checkbox = document.getElementById('click');
+                const navUl = document.querySelector('.nav-home ul');
+                const hamburgerIcon = document.querySelector('.hamburger i');
+                const navUlItems = document.querySelectorAll('.nav-home ul li');
+                const dropdown = document.querySelector('.dropdown a');
+
+                checkbox.addEventListener('change', function () {
+                    if (checkbox.checked) {
+                        navUl.classList.add('active');
+                    } else {
+                        navUl.classList.remove('active');
+                    }
+                });
+
+                // Close the menu when clicking on any .nav-home ul li item
+                navUlItems.forEach(item => {
+                    item.addEventListener('click', function () {
+                        navUl.classList.remove('active');
+                        checkbox.checked = false;
+                    });
+                });
+
+                // Exclude .nav-home .nav-right .dropdown from closing the menu
+                dropdown.addEventListener('click', function (event) {
+                    event.stopPropagation();
+                });
+            });
+        </script>
+        <script>
+            $(document).ready(function () {
+                $(".tabs-btn").click(function () {
+                    $("#nav-tabs-wrapper").slideToggle();
+                });
+            });
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
