--- a/dept/cs.html
+++ b/dept/cs.html
@@ -1312,7 +1312,7 @@
         <footer id="footer">
             <div id="mainfoot">
 
-                <div class="dept">
+                <div class="dept-foot">
                     <span><strong>DEPARTMENTS</strong></span>
                     <ul>
                         <li><a href=""><img class="bullets" src="/images/external-link.png" alt="">Computer Science &
@@ -1335,7 +1335,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="dept">
+                <div class="dept-foot">
                     <span><strong>MANDATORY DISCLOSURE</strong></span>
                     <ul>
                         <li><a href=""><img class="bullets" src="/images/external-link.png" alt="">NBA Acrreditation
@@ -1361,7 +1361,7 @@
                         <li><a href=""><img class="bullets" src="/images/external-link.png" alt="">Career</a></li>
                     </ul>
                 </div>
-                <div class="dept">
+                <div class="dept-foot">
                     <span><strong>QUICK LINKS</strong></span>
                     <ul>
                         <li><a href=""><img class="bullets" src="/images/external-link.png" alt="">Admissions</a></li>
@@ -1387,7 +1387,7 @@
                                 Scholarship</a></li>
                     </ul>
                 </div>
-                <div class="dept">
+                <div class="dept-foot">
                     <span><strong>DOWNLOADS</strong></span>
                     <ul>
                         <li><a href=""><img class="bullets" src="/images/external-link.png" alt="">Application Form</a>
