--- a/dept/aiml.html
+++ b/dept/aiml.html
@@ -74,10 +74,13 @@
         </div>
 
 
-
+        <section class="image-body">
+            <div class="image-overlay"></div>
+            <h2>DEPARTMENT OF ARTIFICIAL INTELLIGENCE AND MACHINE LEARNING</h2>
+        </section>
         <section class="dept-about">
             <div class="dept-container container" id="cancon">
-                <div class="decorative-title">
+                <!-- <div class="decorative-title">
                     <div class="decorative-bar left vertical thick"></div>
                     <div class="decorative-bar left horizontal thick"></div>
                     <div class="decorative-bar left horizontal thin"></div>
@@ -87,7 +90,7 @@
                     <div class="decorative-bar right vertical thick"></div>
                     <div class="decorative-bar right horizontal thick"></div>
                     <div class="decorative-bar right horizontal thin"></div>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-sm-3" style="margin-top:20px;	padding-left: 0px;">
                         <!--button --><a href="#" class="nav-tabs-dropdown btn btn-block tabs-btn">Tabs</a>
