--- a/dept/cs.html
+++ b/dept/cs.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -75,9 +78,13 @@
 
 
 
+        <section class="image-body">
+            <div class="image-overlay"></div>
+            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+        </section>
         <section class="dept-about">
             <div class="dept-container container" id="cancon">
-                <div class="decorative-title">
+                <!-- <div class="decorative-title">
                     <div class="decorative-bar left vertical thick"></div>
                     <div class="decorative-bar left horizontal thick"></div>
                     <div class="decorative-bar left horizontal thin"></div>
@@ -87,7 +94,7 @@
                     <div class="decorative-bar right vertical thick"></div>
                     <div class="decorative-bar right horizontal thick"></div>
                     <div class="decorative-bar right horizontal thin"></div>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-sm-3" style="margin-top:20px;	padding-left: 0px;">
                         <a href="#" class="nav-tabs-dropdown btn btn-block tabs-btn">Tabs</a>
