--- a/dept/mech.html
+++ b/dept/mech.html
@@ -75,9 +75,13 @@
 
 
 
+        <section class="image-body">
+            <div class="image-overlay"></div>
+            <h2>DEPARTMENT OF MECHANICAL ENGINEERING</h2>
+        </section>
         <section class="dept-about">
             <div class="dept-container container" id="cancon">
-                <div class="decorative-title">
+                <!-- <div class="decorative-title">
                     <div class="decorative-bar left vertical thick"></div>
                     <div class="decorative-bar left horizontal thick"></div>
                     <div class="decorative-bar left horizontal thin"></div>
@@ -87,7 +91,7 @@
                     <div class="decorative-bar right vertical thick"></div>
                     <div class="decorative-bar right horizontal thick"></div>
                     <div class="decorative-bar right horizontal thin"></div>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-sm-3" style="margin-top:20px;	padding-left: 0px;">
                         <a href="#" class="nav-tabs-dropdown btn btn-block tabs-btn">Tabs</a>
