--- a/dept/cs/structure.html
+++ b/dept/cs/structure.html
@@ -232,6 +232,27 @@
                         </div>
                     </div>
                 </div>
+                <section class="navigation">
+                    <h3 class="department-heading">More About Department >>></h3>
+                    <div class="nav-container">
+                        <div class="nav box1">
+                            <div class="nav-overlay"></div>
+                            <a href="../cs.html">CSE</a>
+                        </div>
+                        <div class="nav box2">
+                            <div class="nav-overlay"></div>
+                            <a href="../cs/faculties.html">Faculty</a>
+                        </div>
+                        <div class="nav box3">
+                            <div class="nav-overlay"></div>
+                            <a href="../cs/hod.html">HOD</a>
+                        </div>
+                        <div class="nav box4">
+                            <div class="nav-overlay"></div>
+                            <a href="../cs/facilities.html">Facility</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
