--- a/dept/ece/facilities.html
+++ b/dept/ece/facilities.html
@@ -80,7 +80,7 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF ELECTRONICS & COMMUNICATION</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
@@ -294,19 +294,19 @@
                     <div class="nav-container">
                         <div class="nav box1">
                             <div class="nav-overlay"></div>
-                            <a href="../cs.html">CSE</a>
+                            <a href="../ece.html">ECE</a>
                         </div>
                         <div class="nav box2">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/faculties.html">Faculty</a>
+                            <a href="../ece/faculties.html">Faculty</a>
                         </div>
                         <div class="nav box3">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/hod.html">HOD</a>
+                            <a href="../ece/hod.html">HOD</a>
                         </div>
                         <div class="nav box4">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/structure.html">PEO</a>
+                            <a href="../ece/structure.html">PEO</a>
                         </div>
                     </div>
                 </section>
