--- a/dept/csbs/structure.html
+++ b/dept/csbs/structure.html
@@ -80,211 +80,37 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF COMPUTER SCIENCE & BUISNESS SYSTEM</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
                 <div class="row">
-                    <div role="" class="tab-pane fade in" id="vtab8">
-                        <link rel="stylesheet" href="../../dist/css/lightbox.min.css">
-                        <script src="../../dist/js/lightbox-plus-jquery.min.js"></script>
+                    <div role="tabpanel" class="tab-pane fade in" id="vtab5">
                         <div class="animatedParent animateOnce">
                             <div class="animated fadeInRight">
-                                <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>LABORATORIES</b>
-                                    </h3>
-                                    <div>
-                                        <figure>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Advanced computing lab.jpg"
-                                                data-lightbox="example-set" data-title="Advanced computing lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Advanced%20computing%20lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
 
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Basic Computing Lab.jpg"
-                                                data-lightbox="example-set" data-title="Basic Computing Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Basic%20Computing%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Data Processing & Graphics Lab.jpg"
-                                                data-lightbox="example-set" data-title="Data Processing & Graphics Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Data%20Processing%20&%20Graphics%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Data Structure & Algorithms Lab.jpg"
-                                                data-lightbox="example-set"
-                                                data-title="Data Structure & Algorithms Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Data%20Structure%20&%20Algorithms%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
+                                <p style="font-weight: 500;color:#000040;"> <b>Bachelor of Engineering (BE) in
+                                        Computer science & Business System (CSBS) programme</b> is affiliated to
+                                    Visvesvaraya Technological University (VTU), Belgaum, Karnataka. This
+                                    programme is offered with a blend of theory and practical courses and
+                                    projects that help its students to cope up with the recent advancements in
+                                    the computer industry. The department conducts the following bridge courses
+                                    for the BE students to make them industry ready and thereby improve
+                                    placement opportunities.</p>
+                                <ul>
 
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Logic Circuits & Microprocess-ors Lab.jpg"
-                                                data-lightbox="example-set"
-                                                data-title="Logic Circuits & Microprocess-ors Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Logic%20Circuits%20&%20Microprocess-ors%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Network & Web Computing Lab.jpg"
-                                                data-lightbox="example-set" data-title="Network & Web Computing Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Network%20&%20Web%20Computing%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
+                                    <li style="font-weight: 500;color:#000040;"> Advanced Java Programming
+                                        (Laboratory)</li>
+                                    <li style="font-weight: 500;color:#000040;"> Python Programming (Laboratory)
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040;"> Soft skills Development Courses
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040;"> Technical Skill Development
+                                        Courses</li>
+                                    <li style="font-weight: 500;color:#000040;"> Business Skill Development
+                                        Courses</li>
 
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/System Software Lab.png"
-                                                data-lightbox="example-set" data-title="System Software Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/System%20Software%20Lab.png"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>SKILL
-                                            DEVELOPMENT</b></h3>
-                                        <table class="table-striped table table-bordered"
-                                            style="font-weight:500;color:#000040;">
-                                            <tbody>
-                                                <tr>
-
-                                                    <th style="text-align:center;">Semester</th>
-                                                    <th style="text-align:center;">Skill Development Courses
-                                                    </th>
-                                                </tr>
-                                                </thead>
-                                            <tbody>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">I
-                                                    </td>
-                                                    <td>Computer assembly &amp; trouble shooting</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Computational problem solving-1</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">
-                                                        II
-                                                    </td>
-                                                    <td>Software installation &amp; configuration</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Computational problem solving-2</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">
-                                                        III
-                                                    </td>
-                                                    <td>Web designing using HTML 5 and CSS3</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Introduction to android application</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Internet of things using raspberry pi</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Effective Speaking and Listening Skills</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">
-                                                        IV
-                                                    </td>
-                                                    <td>Web Programming using sever side scripting languages
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Developing android application using advanced concepts
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Learning python with raspberry pi</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Effective Documentation and Written Communication Skills
-                                                    </td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">V
-                                                    </td>
-                                                    <td>Leadership, Team Building and Interpersonal
-                                                        Communication Skills</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Advanced Computational problem solving</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Advanced Java Programming</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>C# & .Net Programming</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">
-                                                        VI
-                                                    </td>
-                                                    <td>Effective Inductive Learning Ability</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Python Programming </td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td style="vertical-align : middle;text-align:center;">VII
-                                                    </td>
-                                                    <td>Technical Training</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>INDUSTRY
-                                                INTERACTIONS</b></h3>
-                                            <table class="table-striped table table-bordered"
-                                                style="font-weight:500;color:#000040;">
-                                                <thead>
-                                                    <th colspan="4"></th>
-                                                    <tr>
-                                                        <th style="text-align:center;"> Industry/Society </th>
-                                                        <th style="text-align:center;"> Nature of Interaction
-                                                        </th>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> Infosys Technologies</td>
-                                                        <td> Campus Connect Programme (Certification)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> ICT Academy </td>
-                                                        <td> Software, Seminars and Workshops </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Ethnus </td>
-                                                        <td> Training and Internships </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> Fiabilite Networks </td>
-                                                        <td>Internships and Projects </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> CSI (Computer Society of India)</td>
-                                                        <td> Conferences, Workshops, Technical Activities </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> BITES </td>
-                                                        <td> Faculty enrichment programmes </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> QSpiders </td>
-                                                        <td> Technical Training and Internship </td>
-                                                    </tr>
-                                                </thead>
-                                            </table>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -294,26 +120,26 @@
                     <div class="nav-container">
                         <div class="nav box1">
                             <div class="nav-overlay"></div>
-                            <a href="../cs.html">CSE</a>
+                            <a href="../csbs.html">CSBS</a>
                         </div>
                         <div class="nav box2">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/faculties.html">Faculty</a>
+                            <a href="../csbs/faculties.html">Faculty</a>
                         </div>
                         <div class="nav box3">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/hod.html">HOD</a>
+                            <a href="../csbs/hod.html">HOD</a>
                         </div>
                         <div class="nav box4">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/structure.html">PEO</a>
+                            <a href="../csbs/facilities.html">Facility</a>
                         </div>
                     </div>
                 </section>
             </div>
         </section>
 
-        <!-- footer -->
+         <!-- footer -->
         <footer id="footer">
             <div id="mainfoot">
 
