--- a/dept/csd/facilities.html
+++ b/dept/csd/facilities.html
@@ -294,19 +294,19 @@
                     <div class="nav-container">
                         <div class="nav box1">
                             <div class="nav-overlay"></div>
-                            <a href="../cs.html">CSE</a>
+                            <a href="../csd.html">CSD</a>
                         </div>
                         <div class="nav box2">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/faculties.html">Faculty</a>
+                            <a href="../csd/faculties.html">Faculty</a>
                         </div>
                         <div class="nav box3">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/hod.html">HOD</a>
+                            <a href="../csd/hod.html">HOD</a>
                         </div>
                         <div class="nav box4">
                             <div class="nav-overlay"></div>
-                            <a href="../cs/structure.html">PEO</a>
+                            <a href="../csd/structure.html">PEO</a>
                         </div>
                     </div>
                 </section>
