--- a/dept/is/hod.html
+++ b/dept/is/hod.html
@@ -85,235 +85,51 @@
         <section class="dept-about">
             <div class="dept-container " id="cancon">
                 <div class="row">
-                    <div role="" class="tab-pane fade in" id="vtab8">
-                        <link rel="stylesheet" href="../../dist/css/lightbox.min.css">
-                        <script src="../../dist/js/lightbox-plus-jquery.min.js"></script>
+                    <div role="" class="tab-pane fade in" id="vtab3">
                         <div class="animatedParent animateOnce">
                             <div class="animated fadeInRight">
-                                <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>LABORATORIES</b>
-                                    </h3>
-                                    <div>
-                                        <figure>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Advanced computing lab.jpg"
-                                                data-lightbox="example-set" data-title="Advanced computing lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Advanced%20computing%20lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
 
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Basic Computing Lab.jpg"
-                                                data-lightbox="example-set" data-title="Basic Computing Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Basic%20Computing%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Data Processing & Graphics Lab.jpg"
-                                                data-lightbox="example-set" data-title="Data Processing & Graphics Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Data%20Processing%20&%20Graphics%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Data Structure & Algorithms Lab.jpg"
-                                                data-lightbox="example-set"
-                                                data-title="Data Structure & Algorithms Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Data%20Structure%20&%20Algorithms%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
+                                <img id="hodimg"
+                                    src="https://www.canaraengineering.in/departments/faculty/0120160001.jpg"
+                                    class="img-responsive pull-left img-thumbnail" alt="Image" width="auto"
+                                    style="border-style:none;    margin: 0 15px 5px 0;">
+                                <p id="firstline" style="font-weight:500;color:#000040;"><b>"Greetings from the
+                                        department of Computer Science and Engineering (CS&E)"</b></p>
+                                <p style="font-weight:500;color:#000040;"> It gives me pride and pleasure to
+                                    introduce the department and its Web pages. I hope you will browse our OBE
+                                    (Outcome Based Education) driven teaching-learning process, student
+                                    achievements and activities. Our primary goal is to provide quality
+                                    technical education in Computer Science and Engineering enriched with
+                                    values. The process of learning is extremely important in life and it plays
+                                    a crucial role in developing one's intellectual capability, besides career.
+                                    We follow outcome based teaching-learning process that bridges the theory -
+                                    practice gap while remaining grounded in the core of computer science and
+                                    engineering. Nowadays the technology is changing rapidly, especially in the
+                                    field of computing. To face this challenge, we equip our students for
+                                    problem-solving and expose them to the state-of-the-art in computer science
+                                    and information technology. We also work hard to help students to improve
+                                    their verbal and written communication abilities, analytical thinking, and
+                                    soft skills so that they may flourish in the corporate world. We believe
+                                    that, our students who are clear and thorough in computer fundamentals
+                                    coupled with practical experience can adapt to rapid changes in technology
+                                    or software industry easily. The department has produced hundreds of
+                                    competent professionals and has established a name for itself in the region.
+                                    Thanks to the efforts of our Management, affiliating University (VTU),
+                                    faculty, alumni, parents and the students.</p>
+                                <div>
 
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Logic Circuits & Microprocess-ors Lab.jpg"
-                                                data-lightbox="example-set"
-                                                data-title="Logic Circuits & Microprocess-ors Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Logic%20Circuits%20&%20Microprocess-ors%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/Network & Web Computing Lab.jpg"
-                                                data-lightbox="example-set" data-title="Network & Web Computing Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/Network%20&%20Web%20Computing%20Lab.jpg"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
+                                    <p class="text-right" style="font-weight:500;color:#000040;"> <b>Dr. Sunil
+                                            Kumar B L</b></p>
 
-                                            <a class="example-image-link"
-                                                href="departments/cse/labpics/System Software Lab.png"
-                                                data-lightbox="example-set" data-title="System Software Lab">
-                                                <img src="https://www.canaraengineering.in/departments/cse/labpics/System%20Software%20Lab.png"
-                                                    class="img-rounded" width="400" height="300">
-                                            </a>
-                                        </figure>
-                                    </div>
-                                    <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>SKILL
-                                            DEVELOPMENT</b></h3>
-                                        <table class="table-striped table table-bordered"
-                                            style="font-weight:500;color:#000040;">
-                                            <tbody>
-                                                <tr>
-
-                                                    <th style="text-align:center;">Semester</th>
-                                                    <th style="text-align:center;">Skill Development Courses
-                                                    </th>
-                                                </tr>
-                                                </thead>
-                                            <tbody>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">I
-                                                    </td>
-                                                    <td>Computer assembly &amp; trouble shooting</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Computational problem solving-1</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">
-                                                        II
-                                                    </td>
-                                                    <td>Software installation &amp; configuration</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Computational problem solving-2</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">
-                                                        III
-                                                    </td>
-                                                    <td>Web designing using HTML 5 and CSS3</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Introduction to android application</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Internet of things using raspberry pi</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Effective Speaking and Listening Skills</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">
-                                                        IV
-                                                    </td>
-                                                    <td>Web Programming using sever side scripting languages
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Developing android application using advanced concepts
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Learning python with raspberry pi</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Effective Documentation and Written Communication Skills
-                                                    </td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="4" style="vertical-align : middle;text-align:center;">V
-                                                    </td>
-                                                    <td>Leadership, Team Building and Interpersonal
-                                                        Communication Skills</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Advanced Computational problem solving</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Advanced Java Programming</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>C# & .Net Programming</td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td rowspan="2" style="vertical-align : middle;text-align:center;">
-                                                        VI
-                                                    </td>
-                                                    <td>Effective Inductive Learning Ability</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Python Programming </td>
-                                                </tr>
-                                                <tr>
-
-                                                    <td style="vertical-align : middle;text-align:center;">VII
-                                                    </td>
-                                                    <td>Technical Training</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        <h4 id="innerhead1" style="font-weight:500;color:#FFFFFF;"><b>INDUSTRY
-                                                INTERACTIONS</b></h3>
-                                            <table class="table-striped table table-bordered"
-                                                style="font-weight:500;color:#000040;">
-                                                <thead>
-                                                    <th colspan="4"></th>
-                                                    <tr>
-                                                        <th style="text-align:center;"> Industry/Society </th>
-                                                        <th style="text-align:center;"> Nature of Interaction
-                                                        </th>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> Infosys Technologies</td>
-                                                        <td> Campus Connect Programme (Certification)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> ICT Academy </td>
-                                                        <td> Software, Seminars and Workshops </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Ethnus </td>
-                                                        <td> Training and Internships </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> Fiabilite Networks </td>
-                                                        <td>Internships and Projects </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> CSI (Computer Society of India)</td>
-                                                        <td> Conferences, Workshops, Technical Activities </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> BITES </td>
-                                                        <td> Faculty enrichment programmes </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td> QSpiders </td>
-                                                        <td> Technical Training and Internship </td>
-                                                    </tr>
-                                                </thead>
-                                            </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <section class="navigation">
-                    <h3 class="department-heading">More About Department >>></h3>
-                    <div class="nav-container">
-                        <div class="nav box1">
-                            <div class="nav-overlay"></div>
-                            <a href="../cs.html">CSE</a>
-                        </div>
-                        <div class="nav box2">
-                            <div class="nav-overlay"></div>
-                            <a href="../cs/faculties.html">Faculty</a>
-                        </div>
-                        <div class="nav box3">
-                            <div class="nav-overlay"></div>
-                            <a href="../cs/hod.html">HOD</a>
-                        </div>
-                        <div class="nav box4">
-                            <div class="nav-overlay"></div>
-                            <a href="../cs/structure.html">PEO</a>
-                        </div>
-                    </div>
-                </section>
             </div>
         </section>
 
-        <!-- footer -->
+         <!-- footer -->
         <footer id="footer">
             <div id="mainfoot">
 
